shared/src/test/data/yeast/invalid-json/unquoted-value-seq-last.jyt
BeginDocument       0,  1,  0 ''
Error               0,  1,  0 'invalid'
